Minor align fix

--- a/static/css/audio.css
+++ b/static/css/audio.css
@@ -62,7 +62,6 @@ img {
     background: #62626274;
     cursor: pointer;
     border-radius: 4px;
-    margin-top: 1px;
 }
 /* This weird shit is only to let the */
 /* user select easily the start and end */
